Sun Feb 19 00:25:55 2012  Tanaka Akira  <akr@fsij.org>

	* ext/dbm/extconf.rb: don't choose 'dbm' if _GDB_H_ is defined which
	  is available since GDBM 1.9 because 'gdbm_compat' is appropriate
	  choise since GDBM 1.8.1.

Sat Feb 18 23:27:00 2012  Kenta Murata  <mrkn@mrkn.jp>

	* random.c: remove a duplicated comment.

Sat Feb 18 18:43:13 2012  Tanaka Akira  <akr@fsij.org>

	* ext/dbm/extconf.rb (dblib): prefer recent GDBM over older GDBM.
	  (have_declared_libvar): new function to check a declared variable
	  exists in a library.
	  (have_undeclared_libvar): renamed from renamed from have_libvar.
	  (headers.db_check2): check that GDBM version variable if GDBM header
	  is choosen.

	* ext/dbm/dbm.c (Init_dbm): use HAVE_DECLARED_LIBVAR_GDBM_VERSION and
	  HAVE_UNDECLARED_LIBVAR_GDBM_VERSION macro.

Sat Feb 18 13:53:01 2012  Tanaka Akira  <akr@fsij.org>

	* test/dbm/test_dbm.rb (test_dbmfile_suffix): DBM::VERSION should
	  be Berkeley DB if foo.db is created by DBM.open.

Sat Feb 18 13:40:37 2012  Tanaka Akira  <akr@fsij.org>

	* test/dbm/test_dbm.rb (test_dbmfile_suffix): test dbm file suffix.

Sat Feb 18 12:50:59 2012  Tanaka Akira  <akr@fsij.org>

	* ext/dbm/dbm.c (DBM::VERSION): define it by detecting _GDBM_H_ or
	  _DBM_IOERR.

Sat Feb 18 07:52:45 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/enc-unicode.rb: don't use 1.9 feature on tools.

Sat Feb 18 02:48:39 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/fileutils.rb: refactored FileUtil methods to use the
	  `define_command` API.  Patch from 7rans <transfire@gmail.com>
	* test/fileutils/test_dryrun.rb: corresponding test refactoring
	* test/fileutils/test_nowrite.rb: ditto
	* test/fileutils/test_verbose.rb: ditto

Fri Feb 17 21:39:36 2012  Tanaka Akira  <akr@fsij.org>

	* ext/dbm/extconf.rb: remove dbm.

Fri Feb 17 21:18:39 2012  Tanaka Akira  <akr@fsij.org>

	* ext/dbm/extconf.rb: refine header/libraty mismatch detection.
	  check only for ndbm.h except libc.  check _GDBM_H_ for gdbm.